--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -27,8 +27,8 @@ jobs:
 
       - name: Install Capacitor
         run: |
-          npm install @capacitor/cli
-          npx cap init "PhaserGame" "com.example.phasergame" --web-dir=public
+          npm install @capacitor/cli @capacitor/android
+          npx cap init "PhaserGame" "com.example.phasergame" --web-dir=public --npm-client=npm
           npx cap add android
           npx cap sync android
 
