--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -35,6 +35,12 @@ jobs:
       - name: Setup Java & Android SDK
         uses: android-actions/setup-android@v3
 
+      - name: Set up Java
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
       - name: Build APK
         run: |
           cd android
