--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -40,6 +40,9 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
+      - name: Make gradlew executable
+        run: chmod +x android/gradlew    
+
       - name: Build APK
         run: |
           cd android
